# ImgCirclesDetection

./: CMakeLists.txt  DisplayImage.cpp  Image.cpp  Image.h  Main.cpp  Makefile  README.md
.circleci/: config.yml
docker/: Dockerfile  Makefile  make.sh
src/: CMakeLists.txt  DisplayImage  Image.cpp  Image.h  Main.cpp  runTests
unitTests/: ImageTests.cpp  computeGravityCenter.cpp
